Ajout mineurs